playlistService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: song-service
spec:
  selector:
    app: song
  ports:
  - protocol: TCP
    port: 6000
    targetPort: 5000
  type: LoadBalancer
